# classwork-LangChain

./: README.md  main.py  pyproject.toml
.cursor/rules/: my-rules.mdc
lesson1/: lesson1_2.ipynb
lesson2/: conditional_expressions.md  lesson2_1.ipynb  lesson2_2.ipynb
lesson3/: lesson3_1.ipynb  lesson3_2.ipynb  lesson3_3.ipynb
lesson4/: AGENTS.md  lesson4_1.ipynb  lesson4_2.py
lesson5/: lesson5_1.ipynb  lesson5_2.py  lesson5_5.ipynb  lesson5_6.ipynb
lesson6/: lesson6_1.ipynb  lesson6_2.ipynb  lesson6_3.ipynb  lesson6_4.ipynb  lesson6_5.ipynb  lesson6_6.ipynb
lesson7/: lesson7_1.ipynb  lesson7_2.ipynb  lesson7_3.ipynb
lesson7/db/chroma_db_v3/: chroma.sqlite3
lesson7/db/chroma_db_with_metadata_chinese_nb/: chroma.sqlite3
