[project]
name = "classwork-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-ollama",
    "python-dotenv>=1.1.1",
    "gradio>=5.46.1",
    "langchain>=0.3.27",
    "onnxruntime>=1.16.0,<1.23.0",
    "chromadb>=1.2.1",
]
